crates/usfm_parser/tests/snapshots/recovery__content_outside_paragraph.snap
---
source: crates/usfm_parser/tests/recovery.rs
description: "text before any marker\n\\p a"
---
Para p@0..23
  Text "text before any marker"@0..23
Para p@23..27
  Text "a"@26..27
--- diagnostics
warning[content-outside-paragraph] @0..4: content outside a paragraph; an implicit `\p` was opened
