crates/usfm_parser/tests/snapshots/recovery__machine_py_03lev.snap
---
source: crates/usfm_parser/tests/recovery.rs
description: "\\id Leviticus\r\n\\h Leviticus\r\n\\mt Leviticus\r\n\\c 14\r\n\\p\r\n\\v 55 Chapter fourteen, verse fifty-five.\r\n\\v 55b Segment b.\r\n\\v 56 Chapter fourteen, verse fifty-six.\r\n"
---
Para h@15..29
  Text "Leviticus"@18..29
Para mt@29..44
  Text "Leviticus"@33..44
ChapterStart 14@44..49
Para p@51..159
  VerseStart 55@55..60
  Text "Chapter fourteen, verse fifty-five."@61..98
  VerseEnd 55
  Text " "
  VerseStart 55b@98..104
  Text "Segment b."@105..117
  VerseEnd 55b
  Text " "
  VerseStart 56@117..122
  Text "Chapter fourteen, verse fifty-six."@123..159
  VerseEnd 56
ChapterEnd 14
--- diagnostics
error[unknown-book-code] @4..13: `Leviticus` is not a book code
